[gd_scene load_steps=9 format=2]

[ext_resource path="res://swarm.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="CircleShape2D" id=2]
radius = 290.506

[sub_resource type="Gradient" id=3]
resource_local_to_scene = true
offsets = PoolRealArray( 0.00740741, 0.437037, 0.822222 )
colors = PoolColorArray( 0.809082, 0.192789, 0.192789, 1, 0.965332, 0.939194, 0.671207, 1, 0.781738, 0.538528, 0.198488, 1 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="Curve" id=5]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.968354, 0.0556818 ), -3.60801, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]
curve = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=7]
lifetime_randomness = 1.0
trail_divisor = 2
emission_shape = 1
emission_sphere_radius = 5.41
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 60.0
initial_velocity_random = 1.0
angular_velocity = 720.0
angular_velocity_random = 1.0
orbit_velocity = 0.1
orbit_velocity_random = 0.84
linear_accel = -15.0
scale = 10.0
scale_random = 1.0
scale_curve = SubResource( 6 )
color_ramp = SubResource( 4 )

[node name="EnemyRBody" type="RigidBody2D"]
collision_mask = 5
mass = 200.0
continuous_cd = 2
linear_damp = 2.0
angular_damp = 2.0
script = ExtResource( 1 )

[node name="EnemyHitbox" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="EnemySpriteTemp" type="Polygon2D" parent="."]
color = Color( 0.733333, 0.25098, 0.25098, 1 )
polygon = PoolVector2Array( -0.314987, 9.65302, 7.24454, 6.66071, 9.92188, 0.518597, 7.24454, -6.56846, 0.157486, -9.40328, -5.66965, -7.35591, -9.6069, -0.268856, -7.40204, 6.18824 )

[node name="ForwardIndicator" type="Polygon2D" parent="EnemySpriteTemp"]
visible = false
polygon = PoolVector2Array( -1.77969, 0.146584, 0.280479, -16.5221, 2.15336, -0.415279, 0.280479, 2.76862 )

[node name="EnemyVision" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="EnemyVisionField" type="CollisionShape2D" parent="EnemyVision"]
shape = SubResource( 2 )

[node name="DeaþEffect" type="Particles2D" parent="."]
emitting = false
amount = 500
one_shot = true
speed_scale = 3.75
explosiveness = 1.0
randomness = 1.0
local_coords = false
process_material = SubResource( 7 )

[node name="GiveUpTimer" type="Timer" parent="."]
wait_time = 20.0
one_shot = true

[node name="DeaþTimer" type="Timer" parent="."]
one_shot = true

[connection signal="takingDamage" from="." to="." method="_on_EnemyRBody_takingDamage"]
[connection signal="body_shape_entered" from="EnemyVision" to="." method="_on_EnemyVision_body_shape_entered"]
[connection signal="body_shape_exited" from="EnemyVision" to="." method="_on_EnemyVision_body_shape_exited"]
[connection signal="timeout" from="GiveUpTimer" to="." method="_on_GiveUpTimer_timeout"]
[connection signal="timeout" from="DeaþTimer" to="." method="_on_DeaTimer_timeout"]
